upcoming events center align problem solved

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -11796,6 +11796,8 @@ div[class*="col"]:nth-child(even) .team-item:hover .team-thumb::before {
 
 .history-item {
     text-align: center;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .history-item .history-content {
